--- a/Python_test.ipynb
+++ b/Python_test.ipynb
@@ -36,79 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "  studyName  Sample Number                              Species  Region  \\\n",
-       "0   PAL0708              1  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "1   PAL0708              2  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "2   PAL0708              3  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "3   PAL0708              4  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "4   PAL0708              5  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "5   PAL0708              6  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "6   PAL0708              7  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "7   PAL0708              8  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "8   PAL0708              9  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "9   PAL0708             10  Adelie Penguin (Pygoscelis adeliae)  Anvers   \n",
-       "\n",
-       "      Island               Stage Individual ID Clutch Completion    Date Egg  \\\n",
-       "0  Torgersen  Adult, 1 Egg Stage          N1A1               Yes  2007-11-11   \n",
-       "1  Torgersen  Adult, 1 Egg Stage          N1A2               Yes  2007-11-11   \n",
-       "2  Torgersen  Adult, 1 Egg Stage          N2A1               Yes  2007-11-16   \n",
-       "3  Torgersen  Adult, 1 Egg Stage          N2A2               Yes  2007-11-16   \n",
-       "4  Torgersen  Adult, 1 Egg Stage          N3A1               Yes  2007-11-16   \n",
-       "5  Torgersen  Adult, 1 Egg Stage          N3A2               Yes  2007-11-16   \n",
-       "6  Torgersen  Adult, 1 Egg Stage          N4A1                No  2007-11-15   \n",
-       "7  Torgersen  Adult, 1 Egg Stage          N4A2                No  2007-11-15   \n",
-       "8  Torgersen  Adult, 1 Egg Stage          N5A1               Yes  2007-11-09   \n",
-       "9  Torgersen  Adult, 1 Egg Stage          N5A2               Yes  2007-11-09   \n",
-       "\n",
-       "   Culmen Length (mm)  Culmen Depth (mm)  Flipper Length (mm)  Body Mass (g)  \\\n",
-       "0                39.1               18.7                181.0         3750.0   \n",
-       "1                39.5               17.4                186.0         3800.0   \n",
-       "2                40.3               18.0                195.0         3250.0   \n",
-       "3                 NaN                NaN                  NaN            NaN   \n",
-       "4                36.7               19.3                193.0         3450.0   \n",
-       "5                39.3               20.6                190.0         3650.0   \n",
-       "6                38.9               17.8                181.0         3625.0   \n",
-       "7                39.2               19.6                195.0         4675.0   \n",
-       "8                34.1               18.1                193.0         3475.0   \n",
-       "9                42.0               20.2                190.0         4250.0   \n",
-       "\n",
-       "      Sex  Delta 15 N (o/oo)  Delta 13 C (o/oo)  \\\n",
-       "0    MALE                NaN                NaN   \n",
-       "1  FEMALE            8.94956          -24.69454   \n",
-       "2  FEMALE            8.36821          -25.33302   \n",
-       "3     NaN                NaN                NaN   \n",
-       "4  FEMALE            8.76651          -25.32426   \n",
-       "5    MALE            8.66496          -25.29805   \n",
-       "6  FEMALE            9.18718          -25.21799   \n",
-       "7    MALE            9.46060          -24.89958   \n",
-       "8     NaN                NaN                NaN   \n",
-       "9     NaN            9.13362          -25.09368   \n",
-       "\n",
-       "                                Comments  \n",
-       "0         Not enough blood for isotopes.  \n",
-       "1                                    NaN  \n",
-       "2                                    NaN  \n",
-       "3                     Adult not sampled.  \n",
-       "4                                    NaN  \n",
-       "5                                    NaN  \n",
-       "6  Nest never observed with full clutch.  \n",
-       "7  Nest never observed with full clutch.  \n",
-       "8              No blood sample obtained.  \n",
-       "9   No blood sample obtained for sexing.  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>studyName</th>\n      <th>Sample Number</th>\n      <th>Species</th>\n      <th>Region</th>\n      <th>Island</th>\n      <th>Stage</th>\n      <th>Individual ID</th>\n      <th>Clutch Completion</th>\n      <th>Date Egg</th>\n      <th>Culmen Length (mm)</th>\n      <th>Culmen Depth (mm)</th>\n      <th>Flipper Length (mm)</th>\n      <th>Body Mass (g)</th>\n      <th>Sex</th>\n      <th>Delta 15 N (o/oo)</th>\n      <th>Delta 13 C (o/oo)</th>\n      <th>Comments</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>PAL0708</td>\n      <td>1</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N1A1</td>\n      <td>Yes</td>\n      <td>2007-11-11</td>\n      <td>39.1</td>\n      <td>18.7</td>\n      <td>181.0</td>\n      <td>3750.0</td>\n      <td>MALE</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Not enough blood for isotopes.</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>PAL0708</td>\n      <td>2</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N1A2</td>\n      <td>Yes</td>\n      <td>2007-11-11</td>\n      <td>39.5</td>\n      <td>17.4</td>\n      <td>186.0</td>\n      <td>3800.0</td>\n      <td>FEMALE</td>\n      <td>8.94956</td>\n      <td>-24.69454</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>PAL0708</td>\n      <td>3</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N2A1</td>\n      <td>Yes</td>\n      <td>2007-11-16</td>\n      <td>40.3</td>\n      <td>18.0</td>\n      <td>195.0</td>\n      <td>3250.0</td>\n      <td>FEMALE</td>\n      <td>8.36821</td>\n      <td>-25.33302</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>PAL0708</td>\n      <td>4</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N2A2</td>\n      <td>Yes</td>\n      <td>2007-11-16</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>Adult not sampled.</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>PAL0708</td>\n      <td>5</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N3A1</td>\n      <td>Yes</td>\n      <td>2007-11-16</td>\n      <td>36.7</td>\n      <td>19.3</td>\n      <td>193.0</td>\n      <td>3450.0</td>\n      <td>FEMALE</td>\n      <td>8.76651</td>\n      <td>-25.32426</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>PAL0708</td>\n      <td>6</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N3A2</td>\n      <td>Yes</td>\n      <td>2007-11-16</td>\n      <td>39.3</td>\n      <td>20.6</td>\n      <td>190.0</td>\n      <td>3650.0</td>\n      <td>MALE</td>\n      <td>8.66496</td>\n      <td>-25.29805</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>PAL0708</td>\n      <td>7</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N4A1</td>\n      <td>No</td>\n      <td>2007-11-15</td>\n      <td>38.9</td>\n      <td>17.8</td>\n      <td>181.0</td>\n      <td>3625.0</td>\n      <td>FEMALE</td>\n      <td>9.18718</td>\n      <td>-25.21799</td>\n      <td>Nest never observed with full clutch.</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>PAL0708</td>\n      <td>8</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N4A2</td>\n      <td>No</td>\n      <td>2007-11-15</td>\n      <td>39.2</td>\n      <td>19.6</td>\n      <td>195.0</td>\n      <td>4675.0</td>\n      <td>MALE</td>\n      <td>9.46060</td>\n      <td>-24.89958</td>\n      <td>Nest never observed with full clutch.</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>PAL0708</td>\n      <td>9</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N5A1</td>\n      <td>Yes</td>\n      <td>2007-11-09</td>\n      <td>34.1</td>\n      <td>18.1</td>\n      <td>193.0</td>\n      <td>3475.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>No blood sample obtained.</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>PAL0708</td>\n      <td>10</td>\n      <td>Adelie Penguin (Pygoscelis adeliae)</td>\n      <td>Anvers</td>\n      <td>Torgersen</td>\n      <td>Adult, 1 Egg Stage</td>\n      <td>N5A2</td>\n      <td>Yes</td>\n      <td>2007-11-09</td>\n      <td>42.0</td>\n      <td>20.2</td>\n      <td>190.0</td>\n      <td>4250.0</td>\n      <td>NaN</td>\n      <td>9.13362</td>\n      <td>-25.09368</td>\n      <td>No blood sample obtained for sexing.</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -119,8 +49,7 @@
     "penguins_raw = pd.read_csv(r\"C:\\Users\\Laura\\Desktop\\S2DS_technical2\\data\\penguins_raw.csv\")\n",
     "\n",
     "#penguins.head(10)\n",
-    "\n",
-    "penguins_raw.head(10)"
+    "#penguins_raw.head(10)"
    ]
   },
   {
@@ -140,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +126,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 4
     }
    ],
    "source": [
@@ -235,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +226,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 46
+     "execution_count": 6
     }
    ],
    "source": [
@@ -339,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +279,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 7
     }
    ],
    "source": [
@@ -388,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +328,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 8
     }
    ],
    "source": [
@@ -444,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +384,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 60
+     "execution_count": 9
     }
    ],
    "source": [
@@ -495,10 +424,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "species               object\n",
+       "island                object\n",
+       "bill_length_mm       float64\n",
+       "bill_depth_mm        float64\n",
+       "flipper_length_mm    float64\n",
+       "body_mass_g          float64\n",
+       "sex                   object\n",
+       "year                   int64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "male = penguins[penguins[\"sex\"] == \"male\"]\n",
+    "female = penguins[penguins[\"sex\"] == \"female\"]\n",
+    "\n",
+    "#N = 3\n",
+    "\n",
+    "#blue_bar = male[\"flipper_length_mm\"]\n",
+    "\n",
+    "#orange_bar = female[\"flipper_length_mm\"]\n",
+    "\n",
+    "#ind = np.arange(N)\n",
+    "\n",
+    "#plt.figure(figsize=(10,5))\n",
+    "\n",
+    "#width = 0.1\n",
+    "\n",
+    "#plt.bar(ind, blue_bar , width, label='Male')\n",
+    "#plt.bar(ind + width, orange_bar, width, label='Female Penguins')\n",
+    "\n",
+    "#plt.xlabel('Species')\n",
+    "#plt.ylabel('Flipper length (mm)')\n",
+    "#plt.title('Flipper Length Between Male and Female Penguins and Across Species')\n",
+    "\n",
+    "# xticks()\n",
+    "#plt.xticks(ind + width / 2, penguins[\"species\"].unique())\n",
+    "\n",
+    "#plt.legend(loc='best')\n",
+    "#plt.show()\n",
+    "\n",
+    "penguins.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -513,7 +491,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sex_distribution(name):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
